# pyimdbmoviefinder

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py  venv.sh
cli/: clisearch.py
pyimdbmoviefinder/: ImdbSearcher.py  JackettFetcher.py  TorrentDownloader.py  TorrentFetcher.py  TorrentSearcher.py  YtsFetcher.py  __init__.py  clisearch.py  config.ini  http_utils.py  utils.py
pyimdbmoviefinder/cli/: clisearch.py
pymoviefinder/: ImdbSearcher.py  JackettFetcher.py  TorrentDownloader.py  TorrentSearcher.py  YtsFetcher.py  config.ini
pymoviefinder/cli/: clisearch.py
