[build-system]
requires = ["setuptools==68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyimdbmoviefinder"
version = "0.0.4"
authors = [
  { name="Vulpiculus", email="bastien@rnrd.ch" },
]
description = "Library for searching torrents that match an IMDb search."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bastreynard/pyimdbmoviefinder"
Issues = "https://github.com/bastreynard/pyimdbmoviefinder/issues"
